e2e/networking/service-nodeport/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: service-nodeport
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: 00-install.yaml
    - assert:
        file: 00-assert.yaml
    catch:
    - events: {}
  - name: step-01
    try:
    - script:
        content: |
          set -e
          node_port=$(kubectl get svc nginx-nodeport -n $NAMESPACE -o jsonpath='{.spec.ports[0].nodePort}')
          test "$node_port" -ge 30000
          test "$node_port" -le 32767
    - script:
        content: |
          set -e
          addr_count=$(kubectl get endpoints nginx-nodeport -n $NAMESPACE -o jsonpath='{.subsets[0].addresses[*].ip}' | wc -w)
          test "$addr_count" -eq 1
    catch:
    - events: {}
